# serienabend-shef

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  alembic.ini  bun.lockb  chef_config.example.json  docker-compose.yaml  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build-docker-image.yml  codeql.yml
alembic/: README  env.py
alembic/versions/: 456a36dbfa2c_init.py  7f53276fdcf5_init.py  a7f5ce936b04_init.py
serienabend_shef/: __main__.py  alembic.ini  commands.py  constants.py
serienabend_shef/alembic/: README  env.py
serienabend_shef/commands/: chef.py  cli.py
serienabend_shef/db/: __init__.py  db.py  migrations.py
serienabend_shef/db/models/: __init__.py  chef.py  shef.py
serienabend_shef/helpers/: __init__.py  chef.py  exceptions.py  logging.py  shef.py  sqlalchemy.py
sql/: 0000_organic_bruce_banner.sql  0001_clean_namora.sql  tables.sql
sql/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
src/: app.ts  chef.ts  config.ts  data.ts  database.ts  openai.ts  recipe.ts  scheduler.ts  setting.ts  telegram-bot.ts
src/schemas/: chef.ts  history.ts  index.ts  setting.ts
src/types/: Chef.ts  HistoryEntry.ts  SerienabendChefData.ts  chef.ts  history.ts  index.ts  serienabend-chef-data.ts  setting.ts
