[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "serienabend-shef"
version = "0.0.1"
readme = "README.md"
dependencies = [
  "sqlalchemy~=1.4.37",
  "alembic~=1.8.0"
]

[project.scripts]
serienabend-shef = "serienabend_shef.__main__:main"

[tool.setuptools.packages.find]
include = ["serienabend_shef*"]
